very basic ui stack controller implemented. wooha

--- a/static/index.html
+++ b/static/index.html
@@ -12,6 +12,12 @@
 
     <title>superposition</title>
 
+    <style>
+      .inactive {
+        display: none;
+      }
+    </style>
+
     <script>
 
       (function () {
