added base hackney grove components

--- a/static/index.html
+++ b/static/index.html
@@ -10,7 +10,7 @@
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
     <meta name="apple-touch-fullscreen" content="yes">
 
-    <title>superposition</title>
+    <title>HackneyGrove|Architecture|www.hackneygrove.com</title>
 
     <style>
       .inactive {
