--- a/static/index.html
+++ b/static/index.html
@@ -14,7 +14,8 @@
 
     <style>
       .inactive {
-        display: none;
+        opacity: 0;
+        transition: opacity 1s ease;
       }
     </style>
 
